--- a/sample project/index.html
+++ b/sample project/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title> First webpage. </title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
@@ -11,13 +12,25 @@
 
                 <!--Logo-->
                 <div id="logo">
-
+                    <img src="images/Logo.png" />
                 </div>
 
             <!--Navigation menu-->
             <nav>
-
+                <div id="menu">
+                    <ul>
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Our Products</a></li>
+                        <li><a href="#">Careers</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </div>
             </nav>
+        </div>
+
+        <!--Image menu in header to contain an image and a sample text over that image-->
+        <div id="header-image-menu">
 
         </div>
         </header>
@@ -42,7 +55,7 @@
 
         <!--Footer-->
         <footer>
-            
+
         </footer>
     </body>
 </html>
