build web header

--- a/sample project/index.html
+++ b/sample project/index.html
@@ -31,7 +31,8 @@
 
         <!--Image menu in header to contain an image and a sample text over that image-->
         <div id="header-image-menu">
-
+            <img src="images/slider.jpg">
+            <h2 id="image-text">A basic web design course by GeeksForGeeks</h2>
         </div>
         </header>
 
