--- a/sample project/index.html
+++ b/sample project/index.html
@@ -3,6 +3,7 @@
     <head>
         <title> First webpage. </title>
         <link rel="stylesheet" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     </head>
 
     <body>
@@ -40,11 +41,61 @@
         <main>
             <!--Section 1 of the main content-->
             <section>
-
+                <div id="welcome">
+                    <h1 class="title">Welcome to our website.</h1>
+                    <p>This is a <strong> Sample webpage </strong>, a HTML and CSS template designed by the 
+                    <a href="https://www.geeksforgeeks.org/" target="_blank" rel="nofollow">GeeksForGeeks Team</a>
+                    The photos in this template are designed by our <b>Graphics Design Team</b> This template is designed 
+                    to explain the basics of HTML and CSS in our first Web desig course.
+                </p>
+                </div>
             </section>
 
             <!--Section 2 of the main content-->
-            <section>
+            <section class="container" id="section-2">
+                <div class="row">
+                    <div id="column1">
+                        <div class="column-title">
+                            <h2>GFG Content</h2>
+                        </div>
+
+                        <p>A computer science portal for geeks. It contains well written,
+                            well thought and well explained computer science and programming articles,
+                            quizzes and ...
+                        </p>
+
+                        <a href="https://www.geeksforgeeks.org" target="_blank" class="button">Learn More</a>
+                    </div>
+
+                    <div id="column2">
+                        <div class="column-title">
+                            <h2>GFG Practice</h2>
+                        </div>
+
+                        <p>A practice poratal to test your knowledge
+                            of data structures and algorithms by solving
+                            problems asked in interviews of many tech giants
+                            like, Amazon, Microsoft etc.
+                        </p>
+
+                        <a href="https://practice.geeksforgeeks.org/" target="_blank" class="button">Learn More</a>
+                    </div>
+
+                    <div id="column3">
+                        <div class="column-title">
+                            <h2>GFG IDE</h2>
+                        </div>
+
+                        <p>An integrated development environment to
+                            run and test your codes in almost all of
+                            the popular and widely used programming
+                            languages.
+                        </p>
+
+                        <a href="https://ide.geeksforgeeks.org" target="_blank" class="button">Learn More</a>
+                    </div>
+
+                </div>
 
             </section>
 
