--- a/sample project/index.html
+++ b/sample project/index.html
@@ -100,7 +100,53 @@
             </section>
 
             <!--Section 3 of the main content-->
-            <section>
+            <section class="container" id="section-3">
+                <div id="row">
+                    <div id="column21">
+                        <img src="images/writer.jpg" class="image image-full">
+
+                        <div class="img-title">
+                            <h3>Technical Content Writer</h3>
+                        </div>
+
+                        <p> The work requires understanding of computer science concepts. Candidates who are active on practical portal will be preferred</p>
+                        <a href="https://www.geeksforgeeks.org/careers/" target="_blank" class="button"> Apply here. </a>
+                    </div>
+
+                    <div id="column22">
+                        <img src="images/developer.jpg" class="image image-full">
+
+                        <div class="img-title">
+                            <h3>Software Developer</h3>
+                        </div>
+
+                        <p>Good knowledge of php, javascript and AWS. Active candidates on the portal will be preferred.</p>
+                        <a href="https://www.geeksforgeeks.org/careers/" target="_blank" class="button"> Apply here. </a>
+                    </div>
+
+                    <div id="column23">
+                        <img src="images/support.jpg" class="image image-full">
+
+                        <div class="img-title">
+                            <h3>Technical Assistant</h3>
+                        </div>
+
+                        <p>Involves taking doubt sessions, coordinating with mentors and requires in-depth knowledge of data structures and algorithms.</p>
+                        <a href="https://www.geeksforgeeks.org/careers/" target="_blank" class="button"> Apply here. </a>
+                    </div>
+
+                    <div id="column24">
+                        <img src="images/teacher.jpg" class="image image-full">
+
+                        <div class="img-title">
+                            <h3>Mentor / Tutor</h3>
+                        </div>
+
+                        <p>Involves teaching, problem solving ni classes as well asldoubt sessions and thus requires in-depth knowledge of data structures and algorithms .</p>
+                        <a href="https://www.geeksforgeeks.org/careers/" target="_blank" class="button"> Apply here. </a>
+                    </div>
+
+                </div>
 
             </section>
         </main>
