add styling for section 4

--- a/sample project/index.html
+++ b/sample project/index.html
@@ -4,6 +4,7 @@
         <title> First webpage. </title>
         <link rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
     <body>
@@ -152,7 +153,54 @@
         </main>
 
         <!--Footer-->
-        <footer>
+        <footer id "footer">
+            <!--Company details-->
+            <!--1. Address
+            2. Contact number
+            3. Enquiry mail-->
+
+            <div class="company-details">
+                <div class="row">
+                    <div class="col1">
+                        <span id="icon" class="fa fa-map-marker"></span>
+                        <span>
+                            710-B, Advant Navid Business Park,
+                            <br />Sector-142, Noida
+                        </span>
+                    </div>
+
+                    <div class="col2">
+                        <span id="icon" class="fa fa-phone"></span>
+                        <span>
+                           Telephone: +91-860* * * * * * 
+                        </span>
+                    </div>
+
+                    <div class="col3">
+                        <span id="icon" class="fa fa-envelope"></span>
+                        <span>xyz@geeksforgeeks.org</span>
+                    </div>
+                </div>
+            </div>
+
+            <!--Copyright section-->
+            <div class="copyright">
+                <p> All rights reserved | GeeksForGeeks. </p>
+                <ul class="contact">
+
+                    <li>
+                        <a href="#" class="fa fa-twitter"></a>
+                    </li>
+
+                    <li>
+                        <a href="#" class="fa fa-facebook"></a>
+                    </li>
+
+                    <li>
+                        <a href="#" class="fa fa-pinterest-p"></a>
+                    </li>
+                </ul>
+            </div>
 
         </footer>
     </body>
